Very informative
- Chemical Vat category now displays hover text over certain parts to provide extra info that might not be interpreted effectively through the images.